# ngfd

./: .gitignore  Makefile.am  autogen.sh  configure.ac  coverage.sh  ngfd.changes  ngfd.spec
data/: 22ngfd  Makefile.am  ngf-plugin.pc.in  ngf.ini  ngfd  ngfd.ini
data/events.d/: Makefile.am  accessory_connected.ini  accessory_disconnected.ini  battery_low.ini  calendar.ini  charging_started.ini  chat.ini  chat_fg.ini  clock.ini  default.ini  email.ini  information_snd.ini  information_sound.ini  information_strong.ini  information_tacticon.ini  missedcall.ini  pin_query.ini  query.ini  recharge_battery.ini  ringtone.ini  sms.ini  sms_fg.ini  voip_ringtone.ini  warning_snd.ini  warning_sound.ini  warning_strong.ini  warning_tacticon.ini  wrong_charger.ini
data/plugins.d/: Makefile.am  ffmemless.ini  immvibe.ini  profile.ini  resource.ini  streamrestore.ini  transform.ini
doc/: Makefile.am  doxygen.cfg
doc/src/: mainpage.dox
rpm/: ngfd-hybris.spec  ngfd.changes  ngfd.service  ngfd.spec  ngfd.spec.in  ngfd.yaml  precheckin.sh
src/: Makefile.am  audio-gstreamer.c  audio-gstreamer.h  audio-interface.c  audio-interface.h  audio-pulse.c  audio-pulse.h  audio-stream.h  audio.c  audio.h  backlight-dummy.c  backlight.c  backlight.h  context.c  context.h  controller.c  controller.h  daemon.c  daemon.h  dbus-if.c  dbus-if.h  definition.c  definition.h  event-definition.c  event-definition.h  event-prototype.c  event-prototype.h  event.c  event.h  interface.h  led-dummy.c  led.c  led.h  log.c  log.h  main.c  ngf-audio-gstreamer.c  ngf-audio-gstreamer.h  ngf-audio-interface.c  ngf-audio-interface.h  (+89 more)
src/include/: Makefile.am
src/include/ngf/: Makefile.am  context.h  core-hooks.h  core.h  event.h  hook.h  inputinterface.h  log.h  plugin.h  proplist.h  request.h  sinkinterface.h  value.h
src/ngf/: .core.c.swp  Makefile.am  audio-gstreamer.c  audio-interface.c  audio.h  backlight-dummy.c  backlight.c  backlight.h  context-internal.h  context.c  context.h  core-hooks.c  core-hooks.h  core-internal.h  core-player.c  core-player.h  core.c  core.h  dbus-if.c  dbus-if.h  definition.c  definition.h  event-internal.h  event.c  event.h  hook.c  inputinterface-internal.h  inputinterface.c  inputinterface.h  led-dummy.c  led.c  log.c  log.h  main.c  player.c  player.h  plugin-internal.h  plugin.c  plugin.h  profile-dummy.c  (+28 more)
src/plugins/: Makefile.am
src/plugins/android_vibrator/: Makefile.am  plugin.c
src/plugins/callstate/: Makefile.am  plugin.c
src/plugins/canberra/: Makefile.am  plugin.c
src/plugins/dbus/: Makefile.am  com.nokia.NonGraphicFeedback1.Backend.xml  com.nokia.NonGraphicFeedback1.Backend.xml.h  generate.sh  plugin.c
src/plugins/droid-vibrator/: Makefile.am
src/plugins/fake/: Makefile.am  plugin.c
src/plugins/ffmemless/: .plugin.c.swp  Makefile.am  ffmemless.c  ffmemless.h  plugin.c
src/plugins/gst/: Makefile.am  plugin.c  volume.c  volume.h
src/plugins/hybris-vibrator/: Makefile.am  plugin.c
src/plugins/immvibe/: Makefile.am  plugin.c
src/plugins/mce/: Makefile.am  plugin.c
src/plugins/profile/: Makefile.am  plugin.c  profile-plugin.h  session.c  session.h
src/plugins/resource/: Makefile.am  plugin.c
src/plugins/streamrestore/: Makefile.am  plugin.c  volume-controller.c  volume-controller.h
src/plugins/tonegen/: Makefile.am  plugin.c
src/plugins/transform/: Makefile.am  plugin.c
tests/: Makefile.am  output.c  test-audio-interface.c  test-audio.c  test-backlight-dummy.c  test-backlight.c  test-context.c  test-controller.c  test-core.c  test-dbus-if.c  test-definition.c  test-event.c  test-fake-plugin.c  test-inputinterface.c  test-led-dummy.c  test-led.c  test-plugin.c  test-profile.c  test-properties.c  test-property.c  test-proplist.c  test-request.c  test-settings.c  test-sinkinterface.c  test-sound-path.c  test-state.c  test-tone-generator.c  test-value.c  test-vibration-pattern.c  test-volume-controller.c  test-volume.c  tests.xml
