EXTRA_DIST	= $(dbus_DATA) $(ngfconf_DATA)
ngfconfdir	= $(sysconfdir)/ngf
ngfconf_DATA	= ngf.ini
# eventconfdir	= $(sysconfdir)/event.d
# eventconf_DATA= ngfd
x11postdir	= $(sysconfdir)/X11/Xsession.post
x11post_DATA	= 22ngfd
x11actdeaddir	= $(sysconfdir)/X11/Xsession.actdead
x11actdead_DATA = 22ngfd
dbusdir		= $(datadir)/dbus-1/services
dbus_DATA	= com.nokia.NonGraphicFeedback1.Backend.service
