SUBDIRS       = events.d plugins.d
EXTRA_DIST    = $(dbus_DATA) $(ngfconf_DATA) $(dbusconf_DATA)
ngfconfdir    = $(NGFD_CONF_DIR)
ngfconf_DATA  = ngf.ini
dbusdir       = $(datadir)/dbus-1/services
dbus_DATA     = com.nokia.NonGraphicFeedback1.Backend.service
dbusconfdir   = $(sysconfdir)/dbus-1/system.d
dbusconf_DATA = ngfd.conf
