EXTRA_DIST     = $(eventconf_DATA)
eventconfdir   = $(NGFD_CONF_DIR)/events.d
eventconf_DATA =               \
	accessory_connected.ini    \
	accessory_disconnected.ini \
	battery_low.ini            \
	calendar.ini               \
	charging_started.ini       \
	chat.ini                   \
	chat_fg.ini                \
	clock.ini                  \
	email.ini                  \
	information_snd.ini        \
	information_strong.ini     \
	information_tacticon.ini   \
	missedcall.ini             \
	notifier.ini               \
	pin_query.ini              \
	query.ini                  \
	recharge_battery.ini       \
	ringtone.ini               \
	sms.ini                    \
	sms_fg.ini                 \
	voip_ringtone.ini          \
	warning_snd.ini            \
	warning_strong.ini         \
	warning_tacticon.ini       \
	wrong_charger.ini
