EXTRA_DIST     = $(eventconf_DATA)
eventconfdir   = $(NGFD_CONF_DIR)/events.d
eventconf_DATA =               \
	accessory_connected.ini    \
	accessory_disconnected.ini \
	battery_low.ini            \
	calendar.ini               \
	charging_started.ini       \
	chat.ini                   \
	clock.ini                  \
	email.ini                  \
	information_snd.ini        \
	information_strong.ini     \
	information_tacticon.ini   \
	notifier.ini               \
	recharge_battery.ini       \
	ringtone.ini               \
	sms.ini                    \
	voip_ringtone.ini          \
	warning_snd.ini            \
	warning_strong.ini         \
	warning_tacticon.ini       \
	wrong_charger.ini          \
	default.ini
