SUBDIRS = fake resource transform

if BUILD_DBUS
SUBDIRS += dbus
endif

if BUILD_FFMEMLESS
SUBDIRS += ffmemless
endif

if BUILD_MCE
SUBDIRS += mce
SUBDIRS += callstate
endif

if BUILD_IMMVIBE
SUBDIRS += immvibe
endif

if BUILD_PROFILE
SUBDIRS += profile
endif

if BUILD_STREAMRESTORE
SUBDIRS += streamrestore
endif

if BUILD_TONEGEN
SUBDIRS += tonegen
endif

if BUILD_GST
SUBDIRS += gst
endif

if BUILD_CANBERRA
SUBDIRS += canberra
endif
